PDE/jitfailure-dolfin_expression_ab7fe67f6a2049594d3a2fc4aa4e5ff7/error.log
/tmp/tmp3r9v5wpz/dolfin_expression_ab7fe67f6a2049594d3a2fc4aa4e5ff7.cpp: In member function ‘virtual void dolfin::dolfin_expression_ab7fe67f6a2049594d3a2fc4aa4e5ff7::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp3r9v5wpz/dolfin_expression_ab7fe67f6a2049594d3a2fc4aa4e5ff7.cpp:61:25: error: ‘kk’ was not declared in this scope
   61 |           values[0] = 1-kk*x[0]*np.sin(angle1)-kk*x[1]*np.sin(angle2);
      |                         ^~
/tmp/tmp3r9v5wpz/dolfin_expression_ab7fe67f6a2049594d3a2fc4aa4e5ff7.cpp:61:33: error: ‘np’ was not declared in this scope
   61 |           values[0] = 1-kk*x[0]*np.sin(angle1)-kk*x[1]*np.sin(angle2);
      |                                 ^~
/tmp/tmp3r9v5wpz/dolfin_expression_ab7fe67f6a2049594d3a2fc4aa4e5ff7.cpp:61:40: error: ‘angle1’ was not declared in this scope
   61 |           values[0] = 1-kk*x[0]*np.sin(angle1)-kk*x[1]*np.sin(angle2);
      |                                        ^~~~~~
/tmp/tmp3r9v5wpz/dolfin_expression_ab7fe67f6a2049594d3a2fc4aa4e5ff7.cpp:61:63: error: ‘angle2’ was not declared in this scope
   61 |           values[0] = 1-kk*x[0]*np.sin(angle1)-kk*x[1]*np.sin(angle2);
      |                                                               ^~~~~~
